add search fragment desing

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">mercadolibre</string>
+    <string name="find_products">Buscar Productos</string>
 </resources>
