--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">mercadolibre</string>
     <string name="find_products">Buscar Productos</string>
+    <string name="sorry_unknowerror">Error Desconocido , intenta mas tarde</string>
+    <string name="please_fill_the_box">Por favor ingresa el nombre de un producto</string>
 </resources>
