botton sheet to show product details

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,9 @@
     <string name="find_products">Buscar Productos</string>
     <string name="sorry_unknowerror">Error Desconocido , intenta mas tarde</string>
     <string name="please_fill_the_box">Por favor ingresa el nombre de un producto</string>
+    <string name="price">Precio</string>
+    <string name="quantity">cantidad</string>
+    <string name="accept_mercado_pago">Acepta mercado pago</string>
+    <string name="yes">Si</string>
+    <string name="not">Not</string>
 </resources>
